--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ reqwest = { version = "0.11", features = ["json"] }
 tokio = { version = "1.0", features = ["full"] }
 log = "0.4"
 env_logger = "0.10"
+clap = { version = "4.4", features = ["derive"] }
